--- a/css/style.scss
+++ b/css/style.scss
@@ -721,6 +721,7 @@ ul.sidebar {
     padding-left: 20px;
     padding-right: 20px;
     border-radius: 25px;
+    margin-bottom: 30px;
     width: 80%;
     overflow-x: visible;
 
@@ -728,11 +729,18 @@ ul.sidebar {
         padding: 10px;
         color: $mainColor;
         width: 125%;
+        a {
+            color: $mainColor;
+            font-size: 18px;
+        }
 
         &.active {
             background: $secColor;
             color: #fff;
             border-radius: 10px;
+            a {
+                color: #fff;
+            }
         }
     }
 }
@@ -793,7 +801,7 @@ ul.sidebar {
     .question-list {
         border: 2px solid #E1E0E8;
         border-radius: 15px;
-        padding: 10px 20px;
+        padding: 15px 20px;
         margin-bottom: 20px;
         position: relative;
         span.number {
@@ -847,10 +855,341 @@ ul.sidebar {
         label {
             cursor: pointer;
         }
+        .ans-row {
+            padding-inline-start: 60px;
+            margin-top: 15px;
+        }
+        video {
+            height: 250px;
+            width: 450px;
+        }
+        img.question-img {
+            height: 250px;
+            margin-bottom: 20px;
+        }
+       
+    }
+    button.result {
+        background: $thirdColor;
+        border-radius: 25px;
+        color: #fff;
+        border: 3px solid #441181;
+        padding: 9px 50px;
+        font-size: 18px;
+        margin-top: 40px;
+        margin-bottom: 40px;
+        margin-left: auto;
+        margin-right: auto;
+        display: block;
+        @extend .transition;
+
+        &:hover {
+            background: transparent;
+            color: $thirdColor;
+        }
+    }
+
+    .answer-true {
+        .degree {
+            background: #3ACB10;
+        }
+        input[type="radio"] {
+            accent-color: #3ACB10;
+        }
+        
+    }
+    .answer-false {
+        .degree {
+            background: #f00;
+        }
+        input[type="radio"] {
+            accent-color: #f00;
+        }
+        
+    }
+    .label-true {
+        color: #3ACB10;
+    }
+    .label-false {
+        color: #f00;
+    }
+    .total-degree {
+        height: 140px;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        border-radius: 25px;
+        background: #f1eeff;
+        padding: 20px 40px;
+        margin-bottom: 30px;
+        h3 {
+            margin: 0;
+            font-size: 30px;
+            color: #000;
+            span {
+                font-weight: 700;
+                margin-inline-start: 20px;
+            }
+        }
+        button {
+            background: $thirdColor;
+            border-radius: 25px;
+            color: #fff;
+            border: 3px solid #441181;
+            padding: 9px 30px;
+            font-size: 18px;
+            margin-top: 40px;
+            margin-bottom: 40px;
+            @extend .transition;
+    
+            &:hover {
+                background: transparent;
+                color: $thirdColor;
+            }
+        }
+    }
+}
+
+.student-log {
+    .banner {
+        width: 100%;
+        margin-bottom: 30px;
+        height: 160px;
+        padding: 10px 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: $secColor;
+        border: 7px solid #f7a026;
+        border-radius: 25px;
+
+        h3 {
+            color: $mainColor;
+            font-weight: 700;
+            margin: 0;
+            font-size: 36px;
+        }
+
     }
 }
 
 // end form-exam
+
+// start profile
+.profile {
+    .banner {
+        width: 100%;
+        margin-bottom: 30px;
+        height: 160px;
+        padding: 10px 40px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background: $secColor;
+        border: 7px solid #f7a026;
+        border-radius: 25px;
+
+        h3 {
+            color: $mainColor;
+            font-weight: 700;
+            margin: 0;
+            font-size: 36px;
+        }
+
+    }
+    .subscribe-list {
+        padding: 20px;
+        height: 120px;
+        border: 3px solid #E1E0E8;
+        border-radius: 15px;
+        margin-bottom: 20px;
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        h4 {
+            color: $mainColor;
+            font-size: 26px;
+            span {
+                color: $secColor;
+                font-weight: 700;
+                font-size: 36px;
+                margin-inline-end: 20px;
+            }
+        }
+
+        button {
+            background: $thirdColor;
+            border-radius: 25px;
+            color: #fff;
+            border: 3px solid #441181;
+            padding: 9px 50px;
+            font-size: 18px;
+            margin-top: 40px;
+            margin-bottom: 40px;
+            @extend .transition;
+    
+            &:hover {
+                background: transparent;
+                color: $thirdColor;
+            }
+        }
+
+    }
+    .subscribe-form {
+        border: 3px solid #E1E0E8;
+        padding: 20px 40px;
+        border-radius: 15px;
+        margin-bottom: 40px;
+        h4 {
+            color: $mainColor;
+            font-size: 26px;
+            padding-bottom: 20px;
+            border-bottom: 2px solid #ccc;
+            margin-bottom: 30px;
+            span {
+                color: $secColor;
+                font-weight: 700;
+                font-size: 36px;
+                margin-inline-end: 20px;
+            }
+        }
+        img.payment {
+            height: 40px;
+            margin-bottom: 20px;
+        }
+        input {
+            width: 100%;
+            border: 1px solid #ccc;
+            padding: 12px 10px;
+            background: transparent;
+            border-radius: 5px;
+            text-align: right;
+            margin-bottom: 20px;
+        }
+        label {
+            color: #000;
+            font-weight: 700;
+            margin-bottom: 5px;
+            font-size: 14px;
+        }
+        select {
+            width: 100%;
+            border: 1px solid #ccc;
+            padding: 8px 10px;
+            background: transparent;
+            margin-bottom: 30px;
+            border-radius: 5px;
+        }
+        button.main-btn {
+            background: $thirdColor;
+            border-radius: 25px;
+            color: #fff;
+            width: 100%;
+            border: 3px solid #441181;
+            padding: 9px 50px;
+            font-size: 18px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            @extend .transition;
+    
+            &:hover {
+                background: transparent;
+                color: $thirdColor;
+            }
+        }
+        button.sec-btn {
+            background: $secColor;
+            border-radius: 25px;
+            width: 100%;
+            color: #fff;
+            border: 3px solid #f7a026;
+            padding: 9px 50px;
+            font-size: 18px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            @extend .transition;
+    
+            &:hover {
+                background: transparent;
+                color: $secColor;
+            }
+        }
+    }
+    .profile-form {
+        border: 3px solid #E1E0E8;
+        padding: 20px 40px;
+        border-radius: 15px;
+        margin-bottom: 40px; 
+        img.profile-pic {
+            width: 200px;
+            height: 200px;
+            border-radius: 50%;
+            object-fit: cover;
+            box-shadow: 0 0 9px #ccc;
+        }
+        ul.profile-list {
+            li {
+                padding: 14px 0;
+                display: flex;
+                // align-items: center;
+                i {
+                    color: $secColor;
+                    margin-inline-end: 20px;
+                    font-size: 22px;
+                }
+                h4 {
+                    font-size: 20px;
+                    color: #000;
+                }
+            }
+        }
+        button {
+            background: $thirdColor;
+            border-radius: 25px;
+            color: #fff;
+            width: 60%;
+            border: 3px solid #441181;
+            padding: 9px 50px;
+            font-size: 18px;
+            margin-top: 20px;
+            margin-bottom: 20px;
+            @extend .transition;
+    
+            &:hover {
+                background: transparent;
+                color: $thirdColor;
+            }
+        }
+        input {
+            border: 1px solid #ccc;
+            margin-bottom: 20px;
+            background: transparent;
+            border-radius: 25px;
+            padding: 10px;
+            width: 100%;
+        }
+
+        h2 {
+            color: $thirdColor;
+            font-size: 36px;
+            font-weight: 700;
+            margin-bottom: 20px;
+
+        }
+        p {
+            font-size: 16px;
+            line-height: 1.8;
+            color: #777;
+            margin-bottom: 20px;
+            
+        }
+    }
+
+
+}
+// end profile
 
 /* Chrome, Safari, Edge, Opera */
 input::-webkit-outer-spin-button,
@@ -1000,6 +1339,9 @@ input[type=number] {
 
     .form-exam .banner img {
         height: 52px;
+    }
+    .profile .subscribe-form {
+        padding: 20px 15px;
     }
 }
 
